[package]
name = "poem-http-common"
version = "0.2.0"
edition = "2021"
description = "Common HTTP utilities for Poem"
license = "MIT"

[dependencies]
poem = { version = "3.1" }
poem-openapi = { version = "5.1" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12" }
log = "0.4"
rust-embed = "8.0"
mime_guess = "2.0"
hex = "0.4"
